@@ -1,5 +1,7 @@
 0.12.99
 	+ New release
+	+ Objects can have the same or a overlapping addresss than other
+	objects. However addresses of a object's member cannot overlap
 0.12
 	+ Use the new EBox::Model::Row API
 	+ Added pageTitle to Objects model
